src/OpenCvSharp/Internal/PInvoke/NativeMethods/core/NativeMethods_core.cs


    // MIGRATION (issue #1976, strategy 3): array arguments are ArrayProxy passed BY VALUE; the native
    // side rebuilds cv::_InputArray/_OutputArray on its stack. One signature serves both the ref-struct
    // path (optimized kinds) and the still-class path (Raw kinds wrapping an existing cv::_InputArray*).
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_transpose(in InputArrayProxy src, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_transposeND(
        in InputArrayProxy src, [In] int[] order, int orderLength, in OutputArrayProxy dst);


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_transform(in InputArrayProxy src, in OutputArrayProxy dst, in InputArrayProxy m);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_perspectiveTransform(in InputArrayProxy src, in OutputArrayProxy dst, in InputArrayProxy m);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_perspectiveTransform_Mat(IntPtr src, IntPtr dst, IntPtr m);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_perspectiveTransform_Point2f(IntPtr src, int srcLength, IntPtr dst, int dstLength, in InputArrayProxy m);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_perspectiveTransform_Point2d(IntPtr src, int srcLength, IntPtr dst, int dstLength, in InputArrayProxy m);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_perspectiveTransform_Point3f(IntPtr src, int srcLength, IntPtr dst, int dstLength, in InputArrayProxy m);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_perspectiveTransform_Point3d(IntPtr src, int srcLength, IntPtr dst, int dstLength, in InputArrayProxy m);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_completeSymm(in InputOutputArrayProxy mtx, int lowerToUpper);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_setIdentity(in InputOutputArrayProxy mtx, Scalar s);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_determinant(in InputArrayProxy mtx, out double returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_trace(in InputArrayProxy mtx, out Scalar returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_invert(in InputArrayProxy src, in OutputArrayProxy dst, int flags, out double returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_solve(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst, int flags, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_solveLP(in InputArrayProxy func, in InputArrayProxy constr, in OutputArrayProxy z, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_sort(in InputArrayProxy src, in OutputArrayProxy dst, int flags);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_sortIdx(in InputArrayProxy src, in OutputArrayProxy dst, int flags);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_solveCubic(in InputArrayProxy coeffs, in OutputArrayProxy roots, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_solvePoly(in InputArrayProxy coeffs, in OutputArrayProxy roots, int maxIters, out double returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_eigen(in InputArrayProxy src, in OutputArrayProxy eigenvalues, in OutputArrayProxy eigenvectors, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_eigenNonSymmetric(in InputArrayProxy src, in OutputArrayProxy eigenvalues, in OutputArrayProxy eigenvectors);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_calcCovarMatrix_Mat(ReadOnlySpan<IntPtr> samples,
        int nsamples, IntPtr covar, IntPtr mean, int flags, int ctype);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_calcCovarMatrix_InputArray(in InputArrayProxy samples, in OutputArrayProxy covar,
        in InputOutputArrayProxy mean, int flags, int ctype);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_PCACompute(in InputArrayProxy data, in InputOutputArrayProxy mean, in OutputArrayProxy eigenvectors, int maxComponents);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_PCACompute2(in InputArrayProxy data, in InputOutputArrayProxy mean, in OutputArrayProxy eigenvectors, in OutputArrayProxy eigenvalues, int maxComponents);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_PCAComputeVar(in InputArrayProxy data, in InputOutputArrayProxy mean, in OutputArrayProxy eigenvectors, double retainedVariance);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_PCAComputeVar2(in InputArrayProxy data, in InputOutputArrayProxy mean, in OutputArrayProxy eigenvectors, in OutputArrayProxy eigenvalues, double retainedVariance);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_PCAProject(in InputArrayProxy data, in InputArrayProxy mean, in InputArrayProxy eigenvectors, in OutputArrayProxy result);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_PCABackProject(in InputArrayProxy data, in InputArrayProxy mean, in InputArrayProxy eigenvectors, in OutputArrayProxy result);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_SVDecomp(in InputArrayProxy src, in OutputArrayProxy w, in OutputArrayProxy u, in OutputArrayProxy vt, int flags);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_SVBackSubst(in InputArrayProxy w, in InputArrayProxy u, in InputArrayProxy vt, in InputArrayProxy rhs, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_Mahalanobis(in InputArrayProxy v1, in InputArrayProxy v2, in InputArrayProxy icovar, out double returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_dft(in InputArrayProxy src, in OutputArrayProxy dst, int flags, int nonzeroRows);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_idft(in InputArrayProxy src, in OutputArrayProxy dst, int flags, int nonzeroRows);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_dct(in InputArrayProxy src, in OutputArrayProxy dst, int flags);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_idct(in InputArrayProxy src, in OutputArrayProxy dst, int flags);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_mulSpectrums(in InputArrayProxy a, in InputArrayProxy b, in OutputArrayProxy c, int flags, int conjB);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_getOptimalDFTSize(int vecsize, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_theRNG_get(out ulong returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_theRNG_set(ulong returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_randu_InputArray(in InputOutputArrayProxy dst, in InputArrayProxy low, in InputArrayProxy high);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_randu_Scalar(in InputOutputArrayProxy dst, Scalar low, Scalar high);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_randn_InputArray(in InputOutputArrayProxy dst, in InputArrayProxy mean, in InputArrayProxy stddev);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_randn_Scalar(in InputOutputArrayProxy dst, Scalar mean, Scalar stddev);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_randShuffle(in InputOutputArrayProxy dst, double iterFactor, ref ulong rng);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_randShuffle(in InputOutputArrayProxy dst, double iterFactor, IntPtr rng);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_kmeans(
        in InputArrayProxy data, int k, in InputOutputArrayProxy bestLabels,
        TermCriteria criteria, int attempts, int flags, in OutputArrayProxy centers,
        out double returnValue);

    #region base.hpp

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_cubeRoot(float val, out float returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_fastAtan2(float y, float x, out float returnValue);

    #endregion
}
